--- a/clint/index.html
+++ b/clint/index.html
@@ -91,6 +91,260 @@
             </div>
         </div>
     </header>
+    <main>
+        <header class="index-header p-4 position-relative">
+            <div class="center d-inline-block text-light">
+                <p class="rolate d-inline-block ">سفرة</p>
+                <p class="fs-1 mt-5 mb-4">
+                    بتشتري ..بتبيع؟ كله عند ام ربيع
+                </p>
+                <div class="w-75 ms-auto me-auto position-relative">
+                    <a href="add-clint.html" class="float"></a>
+                    <img class="w-75 " src="../assets/images/log.png" alt="">
+                </div>
+            </div>
+        </header>
+        <div class="rest-product p-4">
+            <p class="text-center fs-1">
+                ابحث عن مطعمك المفضل
+            </p>
+            <div class="container">
+                <div class="row justify-content-between">
+                    <div class="col-md-6 col-sm-12 text-center">
+                        <div class="position-relative mt-3 ms-auto me-auto">
+                            <select name="" class=" bg-f6 fs-4 w-75 w-300 p-4 rounde position-relative text-black-50">
+                            <option value="">اختر المدنية</option>
+                        </select>
+                            <i class="fa-solid fa-arrow-down main-color position-absolute move fs-3"></i>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-sm-12 text-center">
+                        <div class="position-relative mt-3 ms-auto me-auto">
+                            <input type="text" name="" placeholder="ابحث عن مطعمك المفضل" class=" bg-f6 fs-4 w-300 w-75 p-4 rounde position-relative text-black-50">
+                            <i class="fa-solid fa-magnifying-glass main-color position-absolute move fs-3"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container-fluid">
+                <div class="row  mt-5">
+                    <div class="col-lg-6 col-md-12 mt-3">
+                        <div class="bg-white rounde p-2">
+                            <div class="row">
+                                <div class="col-5">
+                                    <img class="w-100" src="../assets/images/res-img.png" alt="">
+                                </div>
+                                <div class="col-5">
+                                    <p class="fs-1 fw-bold main-color">
+                                        دجاج كنتاكي
+                                    </p>
+                                    <div class="text-end mt-3">
+                                        <i class="fa-solid fa-star main-color fa-2x"></i>
+                                        <i class="fa-solid fa-star main-color fa-2x"></i>
+                                        <i class="fa-solid fa-star main-color fa-2x"></i>
+                                        <i class="fa-solid fa-star fa-2x"></i>
+                                        <i class="fa-solid fa-star fa-2x"></i>
+                                    </div>
+                                    <p class="text-dark-50 mt-3 fs-4">
+                                        الحد الادني للطلب: 60ريال
+                                    </p>
+                                    <p class="text-dark-50 mt-3 fs-4">
+                                        رسوم التوصيل : 10ريال
+                                    </p>
+                                </div>
+                                <div class="col-2">
+                                    <div class="position-relative open h-100">
+                                        <span class="center-y fs-2 ">مفتوح</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12 mt-3">
+                        <div class="bg-white rounde p-2">
+                            <div class="row">
+                                <div class="col-5">
+                                    <img class="w-100" src="../assets/images/res-img.png" alt="">
+                                </div>
+                                <div class="col-5">
+                                    <p class="fs-1 fw-bold main-color">
+                                        دجاج كنتاكي
+                                    </p>
+                                    <div class="text-end mt-3">
+                                        <i class="fa-solid fa-star main-color fa-2x"></i>
+                                        <i class="fa-solid fa-star main-color fa-2x"></i>
+                                        <i class="fa-solid fa-star main-color fa-2x"></i>
+                                        <i class="fa-solid fa-star fa-2x"></i>
+                                        <i class="fa-solid fa-star fa-2x"></i>
+                                    </div>
+                                    <p class="text-dark-50 mt-3 fs-4">
+                                        الحد الادني للطلب: 60ريال
+                                    </p>
+                                    <p class="text-dark-50 mt-3 fs-4">
+                                        رسوم التوصيل : 10ريال
+                                    </p>
+                                </div>
+                                <div class="col-2">
+                                    <div class="position-relative close h-100">
+                                        <span class="center-y fs-2 ">مغلق</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12 mt-3">
+                        <div class="bg-white rounde p-2">
+                            <div class="row">
+                                <div class="col-5">
+                                    <img class="w-100" src="../assets/images/res-img.png" alt="">
+                                </div>
+                                <div class="col-5">
+                                    <p class="fs-1 fw-bold main-color">
+                                        دجاج كنتاكي
+                                    </p>
+                                    <div class="text-end mt-3">
+                                        <i class="fa-solid fa-star main-color fa-2x"></i>
+                                        <i class="fa-solid fa-star main-color fa-2x"></i>
+                                        <i class="fa-solid fa-star main-color fa-2x"></i>
+                                        <i class="fa-solid fa-star fa-2x"></i>
+                                        <i class="fa-solid fa-star fa-2x"></i>
+                                    </div>
+                                    <p class="text-dark-50 mt-3 fs-4">
+                                        الحد الادني للطلب: 60ريال
+                                    </p>
+                                    <p class="text-dark-50 mt-3 fs-4">
+                                        رسوم التوصيل : 10ريال
+                                    </p>
+                                </div>
+                                <div class="col-2">
+                                    <div class="position-relative open h-100">
+                                        <span class="center-y fs-2 ">مفتوح</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12 mt-3">
+                        <div class="bg-white rounde p-2">
+                            <div class="row">
+                                <div class="col-5">
+                                    <img class="w-100" src="../assets/images/res-img.png" alt="">
+                                </div>
+                                <div class="col-5">
+                                    <p class="fs-1 fw-bold main-color">
+                                        دجاج كنتاكي
+                                    </p>
+                                    <div class="text-end mt-3">
+                                        <i class="fa-solid fa-star main-color fa-2x"></i>
+                                        <i class="fa-solid fa-star main-color fa-2x"></i>
+                                        <i class="fa-solid fa-star main-color fa-2x"></i>
+                                        <i class="fa-solid fa-star fa-2x"></i>
+                                        <i class="fa-solid fa-star fa-2x"></i>
+                                    </div>
+                                    <p class="text-dark-50 mt-3 fs-4">
+                                        الحد الادني للطلب: 60ريال
+                                    </p>
+                                    <p class="text-dark-50 mt-3 fs-4">
+                                        رسوم التوصيل : 10ريال
+                                    </p>
+                                </div>
+                                <div class="col-2">
+                                    <div class="position-relative close h-100">
+                                        <span class="center-y fs-2 ">مغلق</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12 mt-3">
+                        <div class="bg-white rounde p-2">
+                            <div class="row">
+                                <div class="col-5">
+                                    <img class="w-100" src="../assets/images/res-img.png" alt="">
+                                </div>
+                                <div class="col-5">
+                                    <p class="fs-1 fw-bold main-color">
+                                        دجاج كنتاكي
+                                    </p>
+                                    <div class="text-end mt-3">
+                                        <i class="fa-solid fa-star main-color fa-2x"></i>
+                                        <i class="fa-solid fa-star main-color fa-2x"></i>
+                                        <i class="fa-solid fa-star main-color fa-2x"></i>
+                                        <i class="fa-solid fa-star fa-2x"></i>
+                                        <i class="fa-solid fa-star fa-2x"></i>
+                                    </div>
+                                    <p class="text-dark-50 mt-3 fs-4">
+                                        الحد الادني للطلب: 60ريال
+                                    </p>
+                                    <p class="text-dark-50 mt-3 fs-4">
+                                        رسوم التوصيل : 10ريال
+                                    </p>
+                                </div>
+                                <div class="col-2">
+                                    <div class="position-relative open h-100">
+                                        <span class="center-y fs-2 ">مفتوح</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12 mt-3">
+                        <div class="bg-white rounde p-2">
+                            <div class="row">
+                                <div class="col-5">
+                                    <img class="w-100" src="../assets/images/res-img.png" alt="">
+                                </div>
+                                <div class="col-5">
+                                    <p class="fs-1 fw-bold main-color">
+                                        دجاج كنتاكي
+                                    </p>
+                                    <div class="text-end mt-3">
+                                        <i class="fa-solid fa-star main-color fa-2x"></i>
+                                        <i class="fa-solid fa-star main-color fa-2x"></i>
+                                        <i class="fa-solid fa-star main-color fa-2x"></i>
+                                        <i class="fa-solid fa-star fa-2x"></i>
+                                        <i class="fa-solid fa-star fa-2x"></i>
+                                    </div>
+                                    <p class="text-dark-50 mt-3 fs-4">
+                                        الحد الادني للطلب: 60ريال
+                                    </p>
+                                    <p class="text-dark-50 mt-3 fs-4">
+                                        رسوم التوصيل : 10ريال
+                                    </p>
+                                </div>
+                                <div class="col-2">
+                                    <div class="position-relative close h-100">
+                                        <span class="center-y fs-2 ">مغلق</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="mt-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 col-md-12">
+                        <img class="w-100" src="../assets/images/offers.png" alt="">
+                    </div>
+                    <div class="col-lg-6 col-md-12 mt-3 mb-5">
+                        <div class="bg-offer rounde text-center text-light p-5">
+                            <p class="fs-1">
+                                نقدم في سفرة افضل العروض لكل انواع المطاعم والاكلات الشهيه المهلبيه ماذا تنتظر ابداء الاستمتاع بالعروض
+                            </p>
+                            <div class="w-50 p-3 ms-auto fs-3 bg-grad mt-4 me-auto rounded-pill">
+                                <a href="" class="float"></a>
+                                شاهد العروض
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </main>
     <footer class="footer text-light">
         <div class="container-fluid p-5 pb-3">
             <div class="row justify-content-between">
