--- a/clint/index.html
+++ b/clint/index.html
@@ -86,11 +86,93 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 burger">
-                    <i class="fa-solid fa-burger main-color fa-2x"></i>
+                    <button class="link border-0 out-line-0">
+                        <i class="fa-solid fa-burger main-color fa-2x"></i>
+                    </button>
                 </div>
             </div>
         </div>
     </header>
+    <aside class="position-relative  links w-50 float-start">
+        <p class="fs-1 bg-dark m-0 text-light">صفحات العميل</p>
+        <ul class="list-group fs-3 mb-3 list-group-flush">
+            <li class="list-group-item position-relative">
+                <a href="index.html" class="float"></a>
+                الرئيسية
+            </li>
+            <li class="list-group-item position-relative">
+                <a href="add-clint.html" class="float"></a>
+                زبون جديد
+            </li>
+            <li class="list-group-item position-relative">
+                <a href="add-order.html" class="float"></a>
+                طلب جديد
+            </li>
+            <li class="list-group-item position-relative">
+                <a href="call-us.html" class="float"></a>
+                تواصل معنا
+            </li>
+            <li class="list-group-item position-relative">
+                <a href="last-order.html" class="float"></a>
+                طلبات سابقة
+            </li>
+            <li class="list-group-item position-relative">
+                <a href="login.html" class="float"></a>
+                تسجيل الدخول
+            </li>
+            <li class="list-group-item position-relative">
+                <a href="my-account.html" class="float"></a>
+                حسابي
+            </li>
+            <li class="list-group-item position-relative">
+                <a href="recnt-order.html" class="float"></a>
+                الطلبات الحالية
+            </li>
+            <li class="list-group-item position-relative">
+                <a href="rest.html" class="float"></a>
+                المطعم
+            </li>
+            <li class="list-group-item position-relative">
+                <a href="meal.html" class="float"></a>
+                الوجبة
+            </li>
+            <li class="list-group-item position-relative">
+                <a href="offers.html" class="float"></a>
+                العروض
+            </li>
+        </ul>
+        <p class="fs-1 bg-dark m-0 text-light">صفحات المطعم</p>
+        <ul class="list-group fs-3 mb-3 list-group-flush">
+            <li class="list-group-item position-relative">
+                <a href="../restaurant/add-marct.html" class="float"></a>
+                انشاء مطعمك
+            </li>
+            <li class="list-group-item position-relative">
+                <a href="../restaurant/add-offer.html" class="float"></a>
+                انشاء عرض
+            </li>
+            <li class="list-group-item position-relative">
+                <a href="../restaurant/add-product.html" class="float"></a>
+                انشاء منتج
+            </li>
+            <li class="list-group-item position-relative">
+                <a href="../restaurant/last-order.html" class="float"></a>
+                الطلبات الاخيرة
+            </li>
+            <li class="list-group-item position-relative">
+                <a href="../restaurant/new-order.html" class="float"></a>
+                الطلبات الجدبدة
+            </li>
+            <li class="list-group-item position-relative">
+                <a href="../restaurant/recent-order.html" class="float"></a>
+                الطلبات الحالية
+            </li>
+            <li class="list-group-item position-relative">
+                <a href="../restaurant/rest-page-seller.html" class="float"></a>
+                صفحة المطعم
+            </li>
+        </ul>
+    </aside>
     <main>
         <header class="index-header p-4 position-relative">
             <div class="center d-inline-block text-light">
@@ -334,7 +416,7 @@
                             <p class="fs-1">
                                 نقدم في سفرة افضل العروض لكل انواع المطاعم والاكلات الشهيه المهلبيه ماذا تنتظر ابداء الاستمتاع بالعروض
                             </p>
-                            <div class="w-50 p-3 ms-auto fs-3 bg-grad mt-4 me-auto rounded-pill">
+                            <div class="w-50 position-relative p-3 ms-auto fs-3 bg-grad mt-4 me-auto rounded-pill">
                                 <a href="" class="float"></a>
                                 شاهد العروض
                             </div>
@@ -343,7 +425,28 @@
                 </div>
             </div>
         </div>
-
+        <div class="download">
+            <div class="container pt-5 ">
+                <h1 class="text-light pe-4 text-end">
+                    قم بتحميل التطبيق الخاص بنا
+                </h1>
+                <div class="row mt-5">
+                    <div class="col-lg-6 col-md-12 ">
+                        <div class="h-100 position-relative">
+                            <div class=" w-100 center me-auto ms-auto">
+                                <a class="float" href="#"></a>
+                                <img class="w-100 p-5" src="../assets/images/download button.png">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12 mt-5">
+                        <div class="me-auto ms-auto">
+                            <img class="w-100" src="../assets/images/app-download.png">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <footer class="footer text-light">
         <div class="container-fluid p-5 pb-3">
