--- a/clint/offers.html
+++ b/clint/offers.html
@@ -30,8 +30,8 @@
                             <div class="col-3 text-center">
                                 <div class="dropdown d-inline-block">
                                     <button class="btn position-relative shadow-none p-0 dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                                        <i class="fa-solid fa-circle-user fa-2x main-color"></i>
-                                    </button>
+                            <i class="fa-solid fa-circle-user fa-2x main-color"></i>
+                        </button>
                                     <ul class="dropdown-menu text-end" aria-labelledby="dropdownMenuButton1">
                                         <li>
                                             <a class="dropdown-item" href="#">
@@ -86,7 +86,9 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 burger">
-                    <i class="fa-solid fa-burger main-color fa-2x"></i>
+                    <button class="link border-0 out-line-0">
+                        <i class="fa-solid fa-burger main-color fa-2x"></i>
+                    </button>
                 </div>
             </div>
         </div>
@@ -96,47 +98,47 @@
             <p class="fs-1 bg-dark m-0  text-light">صفحات العميل</p>
             <ul class="list-group text-center pe-0 fs-3 mb-3 list-group-flush">
                 <li class="list-group-item position-relative">
-                    <a href="index.html" class="float"></a>
+                    <a href="../clint/index.html" class="float"></a>
                     الرئيسية
                 </li>
                 <li class="list-group-item position-relative">
-                    <a href="add-clint.html" class="float"></a>
+                    <a href="../clint/add-clint.html" class="float"></a>
                     زبون جديد
                 </li>
                 <li class="list-group-item position-relative">
-                    <a href="add-order.html" class="float"></a>
+                    <a href="../clint/add-order.html" class="float"></a>
                     طلب جديد
                 </li>
                 <li class="list-group-item position-relative">
-                    <a href="call-us.html" class="float"></a>
+                    <a href="../clint/call-us.html" class="float"></a>
                     تواصل معنا
                 </li>
                 <li class="list-group-item position-relative">
-                    <a href="last-order.html" class="float"></a>
+                    <a href="../clint/last-order.html" class="float"></a>
                     طلبات سابقة
                 </li>
                 <li class="list-group-item position-relative">
-                    <a href="login.html" class="float"></a>
+                    <a href="../clint/login.html" class="float"></a>
                     تسجيل الدخول
                 </li>
                 <li class="list-group-item position-relative">
-                    <a href="my-account.html" class="float"></a>
+                    <a href="../clint/my-account.html" class="float"></a>
                     حسابي
                 </li>
                 <li class="list-group-item position-relative">
-                    <a href="recnt-order.html" class="float"></a>
+                    <a href="../clint/recnt-order.html" class="float"></a>
                     الطلبات الحالية
                 </li>
                 <li class="list-group-item position-relative">
-                    <a href="rest.html" class="float"></a>
+                    <a href="../clint/rest.html" class="float"></a>
                     المطعم
                 </li>
                 <li class="list-group-item position-relative">
-                    <a href="meal.html" class="float"></a>
+                    <a href="../clint/meal.html" class="float"></a>
                     الوجبة
                 </li>
                 <li class="list-group-item position-relative">
-                    <a href="offers.html" class="float"></a>
+                    <a href="../clint/offers.html" class="float"></a>
                     العروض
                 </li>
             </ul>
@@ -173,18 +175,34 @@
             </ul>
         </aside>
     </div>
-    <main class="text-center p-3">
-
-        <form action="add-marct" class="bg-grad add-pro mb-4 mt-4 shadow me-auto ms-auto w-50 p-5 rounde">
-            <p class="fs-4 text-light text-center bg-transparent pb-5 mb-4">تواصل معنا</p>
-            <input type="text" name="" class="bg-white p-3 w-75 rounded-pill me-5 ms-5" placeholder="مازن محمد احمد">
-            <input type="text" name="" class="bg-white p-3 w-75 rounded-pill mt-4 me-5 ms-5" placeholder="mazenmohamed@yahoo.com ">
-            <input type="text" name="" class="bg-white p-3 w-75 rounded-pill mt-4 me-5 ms-5" placeholder="01006383877 ">
-            <input type="text" name="" class="bg-white p-3 w-75 rounded-pill mt-4 me-5 ms-5" placeholder="البلد ">
-            <input type="text" name="" class="bg-white p-3 w-75 rounded-pill mt-4 me-5 ms-5" placeholder="المحافظة ">
-            <textarea name="" class="bg-white p-3 w-75 mt-4 me-5 ms-5" placeholder="العنوان بالتفصيل"></textarea>
-            <input type="submit" value="احفظ التعديلات" class=" text-light text-center fs-3 mt-3  ms-auto me-auto w300 p-3 rounded-pill navy-blue">
-        </form>
+    <main>
+        <div class="container p-4">
+            <p class="fs-4 main-color p-2  right-bor">
+                العروض المتاحة الان
+            </p>
+            <div class="w-25 text-center text-light position-relative p-2 mb-5 ms-auto fs-3 bg-grad mt-4 me-auto rounded-pill">
+                <a href="" class="float"></a>
+                اصف عرض جديد
+            </div>
+            <div class="row">
+                <div class="col-lg-6 col-md-12 mb-2 position-relative">
+                    <a href="#" class="float"></a>
+                    <img class="w-100" src="../assets/images/16285.png" alt="">
+                </div>
+                <div class="col-lg-6 col-md-12 mb-2 position-relative">
+                    <a href="#" class="float"></a>
+                    <img class="w-100" src="../assets/images/16285.png" alt="">
+                </div>
+                <div class="col-lg-6 col-md-12 mb-2 position-relative">
+                    <a href="#" class="float"></a>
+                    <img class="w-100" src="../assets/images/16285.png" alt="">
+                </div>
+                <div class="col-lg-6 col-md-12 mb-2 position-relative">
+                    <a href="#" class="float"></a>
+                    <img class="w-100" src="../assets/images/16285.png" alt="">
+                </div>
+            </div>
+        </div>
     </main>
     <footer class="footer text-light">
         <div class="container-fluid p-5 pb-3">
