--- a/clint/add-clint.html
+++ b/clint/add-clint.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+
     <header class="pb-4">
         <div class="container">
             <div class="row justify-content-center align-items-center">
@@ -93,88 +94,89 @@
             </div>
         </div>
     </header>
-    <aside class="position-relative  links w-50 float-start">
-        <p class="fs-1 bg-dark m-0 text-light">صفحات العميل</p>
-        <ul class="list-group fs-3 mb-3 list-group-flush">
-            <li class="list-group-item position-relative">
-                <a href="index.html" class="float"></a>
-                الرئيسية
-            </li>
-            <li class="list-group-item position-relative">
-                <a href="add-clint.html" class="float"></a>
-                زبون جديد
-            </li>
-            <li class="list-group-item position-relative">
-                <a href="add-order.html" class="float"></a>
-                طلب جديد
-            </li>
-            <li class="list-group-item position-relative">
-                <a href="call-us.html" class="float"></a>
-                تواصل معنا
-            </li>
-            <li class="list-group-item position-relative">
-                <a href="last-order.html" class="float"></a>
-                طلبات سابقة
-            </li>
-            <li class="list-group-item position-relative">
-                <a href="login.html" class="float"></a>
-                تسجيل الدخول
-            </li>
-            <li class="list-group-item position-relative">
-                <a href="my-account.html" class="float"></a>
-                حسابي
-            </li>
-            <li class="list-group-item position-relative">
-                <a href="recnt-order.html" class="float"></a>
-                الطلبات الحالية
-            </li>
-            <li class="list-group-item position-relative">
-                <a href="rest.html" class="float"></a>
-                المطعم
-            </li>
-            <li class="list-group-item position-relative">
-                <a href="meal.html" class="float"></a>
-                الوجبة
-            </li>
-            <li class="list-group-item position-relative">
-                <a href="offers.html" class="float"></a>
-                العروض
-            </li>
-        </ul>
-        <p class="fs-1 bg-dark m-0 text-light">صفحات المطعم</p>
-        <ul class="list-group fs-3 mb-3 list-group-flush">
-            <li class="list-group-item position-relative">
-                <a href="../restaurant/add-marct.html" class="float"></a>
-                انشاء مطعمك
-            </li>
-            <li class="list-group-item position-relative">
-                <a href="../restaurant/add-offer.html" class="float"></a>
-                انشاء عرض
-            </li>
-            <li class="list-group-item position-relative">
-                <a href="../restaurant/add-product.html" class="float"></a>
-                انشاء منتج
-            </li>
-            <li class="list-group-item position-relative">
-                <a href="../restaurant/last-order.html" class="float"></a>
-                الطلبات الاخيرة
-            </li>
-            <li class="list-group-item position-relative">
-                <a href="../restaurant/new-order.html" class="float"></a>
-                الطلبات الجدبدة
-            </li>
-            <li class="list-group-item position-relative">
-                <a href="../restaurant/recent-order.html" class="float"></a>
-                الطلبات الحالية
-            </li>
-            <li class="list-group-item position-relative">
-                <a href="../restaurant/rest-page-seller.html" class="float"></a>
-                صفحة المطعم
-            </li>
-        </ul>
-    </aside>
+    <div class=" text-center bg-1b">
+        <aside class="position-relative ms-auto me-auto links w-50">
+            <p class="fs-1 bg-dark m-0  text-light">صفحات العميل</p>
+            <ul class="list-group text-center pe-0 fs-3 mb-3 list-group-flush">
+                <li class="list-group-item position-relative">
+                    <a href="index.html" class="float"></a>
+                    الرئيسية
+                </li>
+                <li class="list-group-item position-relative">
+                    <a href="add-clint.html" class="float"></a>
+                    زبون جديد
+                </li>
+                <li class="list-group-item position-relative">
+                    <a href="add-order.html" class="float"></a>
+                    طلب جديد
+                </li>
+                <li class="list-group-item position-relative">
+                    <a href="call-us.html" class="float"></a>
+                    تواصل معنا
+                </li>
+                <li class="list-group-item position-relative">
+                    <a href="last-order.html" class="float"></a>
+                    طلبات سابقة
+                </li>
+                <li class="list-group-item position-relative">
+                    <a href="login.html" class="float"></a>
+                    تسجيل الدخول
+                </li>
+                <li class="list-group-item position-relative">
+                    <a href="my-account.html" class="float"></a>
+                    حسابي
+                </li>
+                <li class="list-group-item position-relative">
+                    <a href="recnt-order.html" class="float"></a>
+                    الطلبات الحالية
+                </li>
+                <li class="list-group-item position-relative">
+                    <a href="rest.html" class="float"></a>
+                    المطعم
+                </li>
+                <li class="list-group-item position-relative">
+                    <a href="meal.html" class="float"></a>
+                    الوجبة
+                </li>
+                <li class="list-group-item position-relative">
+                    <a href="offers.html" class="float"></a>
+                    العروض
+                </li>
+            </ul>
+            <p class="fs-1 bg-dark m-0 text-light">صفحات المطعم</p>
+            <ul class="list-group fs-3 mb-3 pe-0 list-group-flush">
+                <li class="list-group-item position-relative">
+                    <a href="../restaurant/add-marct.html" class="float"></a>
+                    انشاء مطعمك
+                </li>
+                <li class="list-group-item position-relative">
+                    <a href="../restaurant/add-offer.html" class="float"></a>
+                    انشاء عرض
+                </li>
+                <li class="list-group-item position-relative">
+                    <a href="../restaurant/add-product.html" class="float"></a>
+                    انشاء منتج
+                </li>
+                <li class="list-group-item position-relative">
+                    <a href="../restaurant/last-order.html" class="float"></a>
+                    الطلبات الاخيرة
+                </li>
+                <li class="list-group-item position-relative">
+                    <a href="../restaurant/new-order.html" class="float"></a>
+                    الطلبات الجدبدة
+                </li>
+                <li class="list-group-item position-relative">
+                    <a href="../restaurant/recent-order.html" class="float"></a>
+                    الطلبات الحالية
+                </li>
+                <li class="list-group-item position-relative">
+                    <a href="../restaurant/rest-page-seller.html" class="float"></a>
+                    صفحة المطعم
+                </li>
+            </ul>
+        </aside>
+    </div>
     <main class="text-center bg-new p-3">
-
         <form action="add-marct" class="bg-white add-pro mb-4 mt-4 shadow me-auto ms-auto w-50 p-3 rounde">
             <img src="../assets/images/use-img.png" alt="" class="bg-white">
             <input type="text" name="" class="p-3 w-75 me-5 ms-5" placeholder="الاسم">
