--- a/clint/index.html
+++ b/clint/index.html
@@ -30,8 +30,8 @@
                             <div class="col-3 text-center">
                                 <div class="dropdown d-inline-block">
                                     <button class="btn position-relative shadow-none p-0 dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="fa-solid fa-circle-user fa-2x main-color"></i>
-                        </button>
+                                        <i class="fa-solid fa-circle-user fa-2x main-color"></i>
+                                    </button>
                                     <ul class="dropdown-menu text-end" aria-labelledby="dropdownMenuButton1">
                                         <li>
                                             <a class="dropdown-item" href="#">
@@ -86,93 +86,93 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 burger">
-                    <button class="link border-0 out-line-0">
-                        <i class="fa-solid fa-burger main-color fa-2x"></i>
-                    </button>
+                    <i class="fa-solid fa-burger main-color fa-2x"></i>
                 </div>
             </div>
         </div>
     </header>
-    <aside class="position-relative  links w-50 float-start">
-        <p class="fs-1 bg-dark m-0 text-light">صفحات العميل</p>
-        <ul class="list-group fs-3 mb-3 list-group-flush">
-            <li class="list-group-item position-relative">
-                <a href="index.html" class="float"></a>
-                الرئيسية
-            </li>
-            <li class="list-group-item position-relative">
-                <a href="add-clint.html" class="float"></a>
-                زبون جديد
-            </li>
-            <li class="list-group-item position-relative">
-                <a href="add-order.html" class="float"></a>
-                طلب جديد
-            </li>
-            <li class="list-group-item position-relative">
-                <a href="call-us.html" class="float"></a>
-                تواصل معنا
-            </li>
-            <li class="list-group-item position-relative">
-                <a href="last-order.html" class="float"></a>
-                طلبات سابقة
-            </li>
-            <li class="list-group-item position-relative">
-                <a href="login.html" class="float"></a>
-                تسجيل الدخول
-            </li>
-            <li class="list-group-item position-relative">
-                <a href="my-account.html" class="float"></a>
-                حسابي
-            </li>
-            <li class="list-group-item position-relative">
-                <a href="recnt-order.html" class="float"></a>
-                الطلبات الحالية
-            </li>
-            <li class="list-group-item position-relative">
-                <a href="rest.html" class="float"></a>
-                المطعم
-            </li>
-            <li class="list-group-item position-relative">
-                <a href="meal.html" class="float"></a>
-                الوجبة
-            </li>
-            <li class="list-group-item position-relative">
-                <a href="offers.html" class="float"></a>
-                العروض
-            </li>
-        </ul>
-        <p class="fs-1 bg-dark m-0 text-light">صفحات المطعم</p>
-        <ul class="list-group fs-3 mb-3 list-group-flush">
-            <li class="list-group-item position-relative">
-                <a href="../restaurant/add-marct.html" class="float"></a>
-                انشاء مطعمك
-            </li>
-            <li class="list-group-item position-relative">
-                <a href="../restaurant/add-offer.html" class="float"></a>
-                انشاء عرض
-            </li>
-            <li class="list-group-item position-relative">
-                <a href="../restaurant/add-product.html" class="float"></a>
-                انشاء منتج
-            </li>
-            <li class="list-group-item position-relative">
-                <a href="../restaurant/last-order.html" class="float"></a>
-                الطلبات الاخيرة
-            </li>
-            <li class="list-group-item position-relative">
-                <a href="../restaurant/new-order.html" class="float"></a>
-                الطلبات الجدبدة
-            </li>
-            <li class="list-group-item position-relative">
-                <a href="../restaurant/recent-order.html" class="float"></a>
-                الطلبات الحالية
-            </li>
-            <li class="list-group-item position-relative">
-                <a href="../restaurant/rest-page-seller.html" class="float"></a>
-                صفحة المطعم
-            </li>
-        </ul>
-    </aside>
+    <div class=" text-center bg-1b">
+        <aside class="position-relative ms-auto me-auto links w-50">
+            <p class="fs-1 bg-dark m-0  text-light">صفحات العميل</p>
+            <ul class="list-group text-center pe-0 fs-3 mb-3 list-group-flush">
+                <li class="list-group-item position-relative">
+                    <a href="../clint/index.html" class="float"></a>
+                    الرئيسية
+                </li>
+                <li class="list-group-item position-relative">
+                    <a href="../clint/add-clint.html" class="float"></a>
+                    زبون جديد
+                </li>
+                <li class="list-group-item position-relative">
+                    <a href="../clint/add-order.html" class="float"></a>
+                    طلب جديد
+                </li>
+                <li class="list-group-item position-relative">
+                    <a href="../clint/call-us.html" class="float"></a>
+                    تواصل معنا
+                </li>
+                <li class="list-group-item position-relative">
+                    <a href="../clint/last-order.html" class="float"></a>
+                    طلبات سابقة
+                </li>
+                <li class="list-group-item position-relative">
+                    <a href="../clint/login.html" class="float"></a>
+                    تسجيل الدخول
+                </li>
+                <li class="list-group-item position-relative">
+                    <a href="../clint/my-account.html" class="float"></a>
+                    حسابي
+                </li>
+                <li class="list-group-item position-relative">
+                    <a href="../clint/recnt-order.html" class="float"></a>
+                    الطلبات الحالية
+                </li>
+                <li class="list-group-item position-relative">
+                    <a href="../clint/rest.html" class="float"></a>
+                    المطعم
+                </li>
+                <li class="list-group-item position-relative">
+                    <a href="../clint/meal.html" class="float"></a>
+                    الوجبة
+                </li>
+                <li class="list-group-item position-relative">
+                    <a href="../clint/offers.html" class="float"></a>
+                    العروض
+                </li>
+            </ul>
+            <p class="fs-1 bg-dark m-0 text-light">صفحات المطعم</p>
+            <ul class="list-group fs-3 mb-3 pe-0 list-group-flush">
+                <li class="list-group-item position-relative">
+                    <a href="../restaurant/add-marct.html" class="float"></a>
+                    انشاء مطعمك
+                </li>
+                <li class="list-group-item position-relative">
+                    <a href="../restaurant/add-offer.html" class="float"></a>
+                    انشاء عرض
+                </li>
+                <li class="list-group-item position-relative">
+                    <a href="../restaurant/add-product.html" class="float"></a>
+                    انشاء منتج
+                </li>
+                <li class="list-group-item position-relative">
+                    <a href="../restaurant/last-order.html" class="float"></a>
+                    الطلبات الاخيرة
+                </li>
+                <li class="list-group-item position-relative">
+                    <a href="../restaurant/new-order.html" class="float"></a>
+                    الطلبات الجدبدة
+                </li>
+                <li class="list-group-item position-relative">
+                    <a href="../restaurant/recent-order.html" class="float"></a>
+                    الطلبات الحالية
+                </li>
+                <li class="list-group-item position-relative">
+                    <a href="../restaurant/rest-page-seller.html" class="float"></a>
+                    صفحة المطعم
+                </li>
+            </ul>
+        </aside>
+    </div>
     <main>
         <header class="index-header p-4 position-relative">
             <div class="center d-inline-block text-light">
