--- a/nav.html
+++ b/nav.html
@@ -5,19 +5,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../assets/css/normal.css" />
-    <link rel="stylesheet" href="../assets/css/all.min.css" />
+    <link rel="stylesheet" href="assets/css/normal.css" />
+    <link rel="stylesheet" href="assets/css/all.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="../assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="../assets/css/bootstrap.min.css.map" crossorigin />
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css.map" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800;900;1000&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <title> sofra </title>
 </head>
 
 <body>
+
     <header class="pb-4">
         <div class="container">
             <div class="row justify-content-center align-items-center">
@@ -30,8 +31,8 @@
                             <div class="col-3 text-center">
                                 <div class="dropdown d-inline-block">
                                     <button class="btn position-relative shadow-none p-0 dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                                        <i class="fa-solid fa-circle-user fa-2x main-color"></i>
-                                    </button>
+                            <i class="fa-solid fa-circle-user fa-2x main-color"></i>
+                        </button>
                                     <ul class="dropdown-menu text-end" aria-labelledby="dropdownMenuButton1">
                                         <li>
                                             <a class="dropdown-item" href="#">
@@ -86,105 +87,94 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 burger">
-                    <i class="fa-solid fa-burger main-color fa-2x"></i>
+                    <button class="link border-0 out-line-0">
+                        <i class="fa-solid fa-burger main-color fa-2x"></i>
+                    </button>
                 </div>
             </div>
         </div>
     </header>
-    <div class=" text-center bg-1b">
+    <main class=" text-center bg-1b">
         <aside class="position-relative ms-auto me-auto links w-50">
             <p class="fs-1 bg-dark m-0  text-light">صفحات العميل</p>
             <ul class="list-group text-center pe-0 fs-3 mb-3 list-group-flush">
                 <li class="list-group-item position-relative">
-                    <a href="index.html" class="float"></a>
+                    <a href="clint/index.html" class="float"></a>
                     الرئيسية
                 </li>
                 <li class="list-group-item position-relative">
-                    <a href="add-clint.html" class="float"></a>
+                    <a href="clint/add-clint.html" class="float"></a>
                     زبون جديد
                 </li>
                 <li class="list-group-item position-relative">
-                    <a href="add-order.html" class="float"></a>
+                    <a href="clint/add-order.html" class="float"></a>
                     طلب جديد
                 </li>
                 <li class="list-group-item position-relative">
-                    <a href="call-us.html" class="float"></a>
+                    <a href="clint/call-us.html" class="float"></a>
                     تواصل معنا
                 </li>
                 <li class="list-group-item position-relative">
-                    <a href="last-order.html" class="float"></a>
+                    <a href="clint/last-order.html" class="float"></a>
                     طلبات سابقة
                 </li>
                 <li class="list-group-item position-relative">
-                    <a href="login.html" class="float"></a>
+                    <a href="clint/login.html" class="float"></a>
                     تسجيل الدخول
                 </li>
                 <li class="list-group-item position-relative">
-                    <a href="my-account.html" class="float"></a>
+                    <a href="clint/my-account.html" class="float"></a>
                     حسابي
                 </li>
                 <li class="list-group-item position-relative">
-                    <a href="recnt-order.html" class="float"></a>
+                    <a href="clint/recnt-order.html" class="float"></a>
                     الطلبات الحالية
                 </li>
                 <li class="list-group-item position-relative">
-                    <a href="rest.html" class="float"></a>
+                    <a href="clint/rest.html" class="float"></a>
                     المطعم
                 </li>
                 <li class="list-group-item position-relative">
-                    <a href="meal.html" class="float"></a>
+                    <a href="clint/meal.html" class="float"></a>
                     الوجبة
                 </li>
                 <li class="list-group-item position-relative">
-                    <a href="offers.html" class="float"></a>
+                    <a href="clint/offers.html" class="float"></a>
                     العروض
                 </li>
             </ul>
             <p class="fs-1 bg-dark m-0 text-light">صفحات المطعم</p>
             <ul class="list-group fs-3 mb-3 pe-0 list-group-flush">
                 <li class="list-group-item position-relative">
-                    <a href="../restaurant/add-marct.html" class="float"></a>
+                    <a href="restaurant/add-marct.html" class="float"></a>
                     انشاء مطعمك
                 </li>
                 <li class="list-group-item position-relative">
-                    <a href="../restaurant/add-offer.html" class="float"></a>
+                    <a href="restaurant/add-offer.html" class="float"></a>
                     انشاء عرض
                 </li>
                 <li class="list-group-item position-relative">
-                    <a href="../restaurant/add-product.html" class="float"></a>
+                    <a href="restaurant/add-product.html" class="float"></a>
                     انشاء منتج
                 </li>
                 <li class="list-group-item position-relative">
-                    <a href="../restaurant/last-order.html" class="float"></a>
+                    <a href="restaurant/last-order.html" class="float"></a>
                     الطلبات الاخيرة
                 </li>
                 <li class="list-group-item position-relative">
-                    <a href="../restaurant/new-order.html" class="float"></a>
+                    <a href="restaurant/new-order.html" class="float"></a>
                     الطلبات الجدبدة
                 </li>
                 <li class="list-group-item position-relative">
-                    <a href="../restaurant/recent-order.html" class="float"></a>
+                    <a href="restaurant/recent-order.html" class="float"></a>
                     الطلبات الحالية
                 </li>
                 <li class="list-group-item position-relative">
-                    <a href="../restaurant/rest-page-seller.html" class="float"></a>
+                    <a href="restaurant/rest-page-seller.html" class="float"></a>
                     صفحة المطعم
                 </li>
             </ul>
         </aside>
-    </div>
-    <main class="text-center p-3">
-
-        <form action="add-marct" class="bg-grad add-pro mb-4 mt-4 shadow me-auto ms-auto w-50 p-5 rounde">
-            <p class="fs-4 text-light text-center bg-transparent pb-5 mb-4">تواصل معنا</p>
-            <input type="text" name="" class="bg-white p-3 w-75 rounded-pill me-5 ms-5" placeholder="مازن محمد احمد">
-            <input type="text" name="" class="bg-white p-3 w-75 rounded-pill mt-4 me-5 ms-5" placeholder="mazenmohamed@yahoo.com ">
-            <input type="text" name="" class="bg-white p-3 w-75 rounded-pill mt-4 me-5 ms-5" placeholder="01006383877 ">
-            <input type="text" name="" class="bg-white p-3 w-75 rounded-pill mt-4 me-5 ms-5" placeholder="البلد ">
-            <input type="text" name="" class="bg-white p-3 w-75 rounded-pill mt-4 me-5 ms-5" placeholder="المحافظة ">
-            <textarea name="" class="bg-white p-3 w-75 mt-4 me-5 ms-5" placeholder="العنوان بالتفصيل"></textarea>
-            <input type="submit" value="احفظ التعديلات" class=" text-light text-center fs-3 mt-3  ms-auto me-auto w300 p-3 rounded-pill navy-blue">
-        </form>
     </main>
     <footer class="footer text-light">
         <div class="container-fluid p-5 pb-3">
@@ -215,16 +205,16 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-12 text-start">
-                    <img src="../assets/images/sofra logo.png" class="w-75" alt="">
+                    <img src="assets/images/sofra logo.png" class="w-75" alt="">
                 </div>
             </div>
         </div>
     </footer>
-    <script src="../assets/js/jquery-3.6.1.min.js"></script>
-    <script src="../assets/js/bootstrap.bundle.min.js"></script>
-    <script src="../assets/js/all.min.js"></script>
-    <script src="../assets/plugins/owl-calrousel/owl.carousel.min.js"></script>
-    <script src="../assets/js/main.js"></script>
+    <script src="assets/js/jquery-3.6.1.min.js"></script>
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/all.min.js"></script>
+    <script src="assets/plugins/owl-calrousel/owl.carousel.min.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
